manifests/networking/cloudshelf-nodeport-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudshelf-nodeport
  namespace: cloudshelf-namespace

spec:
  selector:
    app: cloudshelf-web

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

  type: NodePort
