manifests/networking/cloudshelf-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudshelf-service
  namespace: cloudshelf-namespace

spec:
  selector:
    app: cloudshelf-web

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
