manifests/networking/cloudshelf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudshelf-ingress
  namespace: cloudshelf-namespace

spec:
  ingressClassName: nginx

  rules:
  - host: cloudshelf.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: cloudshelf-service

            port:
              number: 80
